[package]
name = "gh-token-gen"
version = "4.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
base64ct = { version = "1.8.3", features = ["alloc"] }
http = "1.4.0"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
web-sys = { version = "0.3.85", features = [
    "Crypto",
    "SubtleCrypto",
    "CryptoKey"] }
pem = "3.0.6"
wasm-bindgen = { version = "0.2.108", features = ["std"] }
wasm-bindgen-futures = "0.4.58"
chrono = { version = "0.4.44", default-features = false, features = ["wasmbind", "js-sys", "now"] }
serde-wasm-bindgen = "0.6.5"
rsa = { version = "0.9.10", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
pkcs1 = { version = "0.7.5", features = ["pkcs8"] }
wasm-actions = { git = "https://github.com/oakcask/wasm-actions.git" }

[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[build-dependencies]
wasm-actions-build = { git = "https://github.com/oakcask/wasm-actions.git" }
