[package]
name = "gh-token-gen"
version = "5.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
base64ct = { version = "1.8.3", features = ["alloc"] }
http = "1.4.0"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
web-sys = { version = "0.3.95", features = [
    "Crypto",
    "SubtleCrypto",
    "CryptoKey"] }
pem = "3.0.6"
wasm-bindgen = { version = "0.2.118", features = ["std"] }
wasm-bindgen-futures = "0.4.68"
chrono = { version = "0.4.44", default-features = false, features = ["wasmbind", "js-sys", "now"] }
serde-wasm-bindgen = "0.6.5"
rsa = { version = "0.9.10", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
pkcs1 = { version = "0.7.5", features = ["pkcs8"] }
wasm-actions = { git = "https://github.com/oakcask/wasm-actions.git", rev = "2ebe3b962d8131449e976492463c81d463eca3ef" }

[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.68"

[build-dependencies]
wasm-actions-build = { git = "https://github.com/oakcask/wasm-actions.git", rev = "e3f5be4bee082cd40b9893b52ca5c2930499462e" }
